Fri Aug 31 04:46:04 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/zsoelim.l (main): Call pipeline_install_sigchld.

Wed Aug 29 17:12:52 BST 2007  Lars Wirzenius  <liw@iki.fi>

	* po/fi.po: Adjust translation of "No manual entry for %s" (Debian
	  bug #320108).

Wed Aug 29 15:22:54 BST 2007  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: Update from Translation Project.

Wed Aug 29 15:18:34 BST 2007  Daniel Nylander  <po@danielnylander.se>

	* po/sv.po: Update from Translation Project.

Wed Aug 29 12:07:38 BST 2007  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Reorganise slightly. Document mandb --quiet fixes.

Wed Aug 29 11:57:59 BST 2007  Colin Watson  <cjwatson@debian.org>

	Add an option to apropos to display only items matching all keywords
	(thanks, Alfie Costa; Debian bug #259340).

	* src/whatis.c (args, long_options, main): New -a/--and option for
	  apropos.
	  (usage): Document it.
	  (apropos): Store a count of how many times each item has been seen
	  in the hashtable. If --and was given, only display an item if its
	  count equals the number of supplied keywords.
	  (main): Store the number of supplied keywords. Adjust hash free
	  function.
	* man/man1/apropos.man1 (SYNOPSIS, OPTIONS): Document --and.
	* docs/NEWS: Document this.

Wed Aug 29 11:09:31 BST 2007  Colin Watson  <cjwatson@debian.org>

	* m4/man-path-progs.m4: Rename to ...
	* m4/man-check-progs.m4: ... this. Use AC_CHECK_PROGS rather than
	  AC_PATH_PROGS.
	* configure.ac: Use AC_CHECK_PROGS rather than
	  AC_PATH_PROG/AC_PATH_PROGS, and MAN_CHECK_PROGS rather than
	  MAN_PATH_PROGS. This fixes problems due to system utilities moving
	  around on $PATH (Debian bug #385651).

Wed Aug 29 10:42:08 BST 2007  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Move bogus makefile content ...
	* makefile.in: ... here.

Wed Aug 29 10:15:33 BST 2007  Colin Watson  <cjwatson@debian.org>

	* m4/man-path-progs.m4: Define HAVE_WITH-ARG if the program is
	  found.