@@ -1,3 +1,9 @@
+Fri Aug 31 04:54:45 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* lib/pipeline.c (pipeline_free): Call pipeline_wait if the pipeline
+	  is still running.
+	* lib/pipeline.h (pipeline_free): Document that this may happen.
+
 Fri Aug 31 04:46:04 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* src/zsoelim.l (main): Call pipeline_install_sigchld.
